Modify code style refering to google code style.