@@ -1,19 +1,31 @@
 package org.gnuhpc.bigdata.model;
 
-import lombok.Getter;
-import lombok.Setter;
-
-import javax.management.*;
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import javax.management.AttributeNotFoundException;
+import javax.management.InstanceNotFoundException;
+import javax.management.MBeanAttributeInfo;
+import javax.management.MBeanException;
+import javax.management.MBeanServerConnection;
+import javax.management.ObjectName;
+import javax.management.ReflectionException;
+import lombok.Getter;
+import lombok.Setter;
 
 @Getter
 @Setter
 public abstract class JMXAttribute {
+
   private MBeanAttributeInfo attribute;
   private ObjectName beanName;
   private MBeanServerConnection connection;
@@ -22,9 +34,18 @@ public abstract class JMXAttribute {
   private String domain;
   private HashMap<String, String> beanParameters;
   private JMXConfiguration matchingConf;
-  private LinkedHashMap<String, LinkedHashMap<Object, Object>> valueConversions = new LinkedHashMap<String, LinkedHashMap<Object, Object>>();
-  private static final List<String> EXCLUDED_BEAN_PARAMS = Arrays.asList("domain", "domain_regex", "bean_name", "bean",
-          "bean_regex", "attribute", "exclude_tags", "tags");
+  private LinkedHashMap<String, LinkedHashMap<Object, Object>> valueConversions =
+      new LinkedHashMap<String, LinkedHashMap<Object, Object>>();
+  private static final List<String> EXCLUDED_BEAN_PARAMS =
+      Arrays.asList(
+          "domain",
+          "domain_regex",
+          "bean_name",
+          "bean",
+          "bean_regex",
+          "attribute",
+          "exclude_tags",
+          "tags");
   protected static final String METRIC_TYPE = "metric_type";
   protected static final String ALIAS = "alias";
   private static final String FIRST_CAP_PATTERN = "(.)([A-Z][a-z]+)";
@@ -32,33 +53,40 @@ public abstract class JMXAttribute {
   private static final String METRIC_REPLACEMENT = "([^a-zA-Z0-9_.]+)|(^[^a-zA-Z]+)";
   private static final String DOT_UNDERSCORE = "_*\\._*";
 
-  public JMXAttribute(MBeanAttributeInfo attribute, ObjectName beanName, MBeanServerConnection connection) {
+  public JMXAttribute(
+      MBeanAttributeInfo attribute, ObjectName beanName, MBeanServerConnection connection) {
     this.attribute = attribute;
     this.attributeName = attribute.getName();
     this.beanName = beanName;
     this.beanStringName = beanName.toString();
     this.connection = connection;
-    // A bean name is formatted like that: org.apache.cassandra.db:type=Caches,keyspace=system,cache=HintsColumnFamilyKeyCache
+    // A bean name is formatted like that:
+    // org.apache.cassandra.db:type=Caches,keyspace=system,cache=HintsColumnFamilyKeyCache
     // i.e. : domain:bean_parameter1,bean_parameter2
-    //Note: some beans have a ':' in the name. Example:  some.domain:name="some.bean.0.0.0.0:80.some-metric"
+    // Note: some beans have a ':' in the name. Example:
+    // some.domain:name="some.bean.0.0.0.0:80.some-metric"
     int splitPosition = beanStringName.indexOf(':');
     String domain = beanStringName.substring(0, splitPosition);
-    String beanParametersString = beanStringName.substring(splitPosition+1);
+    String beanParametersString = beanStringName.substring(splitPosition + 1);
     this.domain = domain;
     this.matchingConf = null;
 
     HashMap<String, String> beanParametersHash = getBeanParametersHash(beanParametersString);
-    //LinkedList<String> beanParametersList = getBeanParametersList(instanceName, beanParametersHash, instanceTags);
+    // LinkedList<String> beanParametersList = getBeanParametersList(instanceName,
+    // beanParametersHash, instanceTags);
     this.beanParameters = beanParametersHash;
   }
 
-
-  public abstract LinkedList<HashMap<String, Object>> getMetrics() throws AttributeNotFoundException, InstanceNotFoundException, MBeanException, ReflectionException, IOException;
+  public abstract LinkedList<HashMap<String, Object>> getMetrics()
+      throws AttributeNotFoundException, InstanceNotFoundException, MBeanException,
+          ReflectionException, IOException;
 
   /**
-   * An abstract function implemented in the inherited classes JMXSimpleAttribute and JMXComplexAttribute
+   * An abstract function implemented in the inherited classes JMXSimpleAttribute and
+   * JMXComplexAttribute
    *
-   * @param conf Configuration a Configuration object that will be used to check if the JMX Attribute match this configuration
+   * @param conf Configuration a Configuration object that will be used to check if the JMX
+   *     Attribute match this configuration
    * @return a boolean that tells if the attribute matches the configuration or not
    */
   public abstract boolean match(JMXConfiguration conf);
@@ -68,10 +96,12 @@ public abstract class JMXAttribute {
     HashMap<String, String> beanParamsMap = new HashMap<String, String>(beanParameters.length);
     for (String param : beanParameters) {
       String[] paramSplit = param.split("=");
+      String first = paramSplit[0];
       if (paramSplit.length > 1) {
-        beanParamsMap.put(new String(paramSplit[0]), new String(paramSplit[1]));
+        String sec = paramSplit[1];
+        beanParamsMap.put(first, sec);
       } else {
-        beanParamsMap.put(new String(paramSplit[0]), "");
+        beanParamsMap.put(first, "");
       }
     }
 
@@ -83,7 +113,7 @@ public abstract class JMXAttribute {
     Pattern includeDomainRegex = conf.getInclude().getDomainRegex();
 
     return (includeDomain == null || includeDomain.equals(this.getDomain()))
-            && (includeDomainRegex == null || includeDomainRegex.matcher(this.getDomain()).matches());
+        && (includeDomainRegex == null || includeDomainRegex.matcher(this.getDomain()).matches());
   }
 
   boolean matchBean(JMXConfiguration configuration) {
@@ -104,7 +134,8 @@ public abstract class JMXAttribute {
 
       ArrayList<String> beanValues = include.getParameterValues(bean_attr);
 
-      if (beanParameters.get(bean_attr) == null || !(beanValues.contains(beanParameters.get(bean_attr)))){
+      if (beanParameters.get(bean_attr) == null
+          || !(beanValues.contains(beanParameters.get(bean_attr)))) {
         return false;
       }
     }
@@ -112,7 +143,9 @@ public abstract class JMXAttribute {
   }
 
   private boolean matchBeanRegex(JMXFilter filter, boolean matchIfNoRegex) {
-    if (filter == null) return matchIfNoRegex;
+    if (filter == null) {
+      return matchIfNoRegex;
+    }
     ArrayList<Pattern> beanRegexes = filter.getBeanRegexes();
     if (beanRegexes.isEmpty()) {
       return matchIfNoRegex;
@@ -121,8 +154,8 @@ public abstract class JMXAttribute {
     for (Pattern beanRegex : beanRegexes) {
       Matcher m = beanRegex.matcher(beanStringName);
 
-      if(m.matches()) {
-        for (int i = 0; i<= m.groupCount(); i++) {
+      if (m.matches()) {
+        for (int i = 0; i <= m.groupCount(); i++) {
           this.beanParameters.put(Integer.toString(i), m.group(i));
         }
         return true;
@@ -132,12 +165,14 @@ public abstract class JMXAttribute {
   }
 
   boolean excludeMatchDomain(JMXConfiguration conf) {
-    if (conf.getExclude() == null) return false;
+    if (conf.getExclude() == null) {
+      return false;
+    }
     String excludeDomain = conf.getExclude().getDomain();
     Pattern excludeDomainRegex = conf.getExclude().getDomainRegex();
 
-    return excludeDomain != null  && excludeDomain.equals(domain)
-            || excludeDomainRegex != null && excludeDomainRegex.matcher(domain).matches();
+    return excludeDomain != null && excludeDomain.equals(domain)
+        || excludeDomainRegex != null && excludeDomainRegex.matcher(domain).matches();
   }
 
   boolean excludeMatchBean(JMXConfiguration configuration) {
@@ -146,10 +181,12 @@ public abstract class JMXAttribute {
 
   private boolean excludeMatchBeanName(JMXConfiguration conf) {
     JMXFilter exclude = conf.getExclude();
-    if (exclude == null) return false;
+    if (exclude == null) {
+      return false;
+    }
     ArrayList<String> beanNames = exclude.getBeanNames();
 
-    if(beanNames.contains(beanStringName)){
+    if (beanNames.contains(beanStringName)) {
       return true;
     }
 
@@ -172,11 +209,13 @@ public abstract class JMXAttribute {
     return false;
   }
 
-  Object getJmxValue() throws AttributeNotFoundException, InstanceNotFoundException, MBeanException, ReflectionException, IOException {
+  Object getJmxValue()
+      throws AttributeNotFoundException, InstanceNotFoundException, MBeanException,
+          ReflectionException, IOException {
     return this.getConnection().getAttribute(this.getBeanName(), this.getAttribute().getName());
   }
 
-  public static List<String> getExcludedBeanParams(){
+  public static List<String> getExcludedBeanParams() {
     return EXCLUDED_BEAN_PARAMS;
   }
 
@@ -186,9 +225,9 @@ public abstract class JMXAttribute {
     if (value instanceof String) {
       return Double.parseDouble((String) value);
     } else if (value instanceof Integer) {
-      return new Double((Integer) (value));
+      return Double.parseDouble(value.toString());
     } else if (value instanceof AtomicInteger) {
-      return new Double(((AtomicInteger) (value)).get());
+      return Double.parseDouble(value.toString());
     } else if (value instanceof AtomicLong) {
       Long l = ((AtomicLong) (value)).get();
       return l.doubleValue();
@@ -197,13 +236,13 @@ public abstract class JMXAttribute {
     } else if (value instanceof Boolean) {
       return ((Boolean) value ? 1.0 : 0.0);
     } else if (value instanceof Long) {
-      Long l = new Long((Long) value);
+      Long l = Long.valueOf(value.toString());
       return l.doubleValue();
     } else if (value instanceof Number) {
       return ((Number) value).doubleValue();
     } else {
       try {
-        return new Double((Double) value);
+        return Double.parseDouble(value.toString());
       } catch (Exception e) {
         throw new NumberFormatException();
       }
@@ -225,12 +264,15 @@ public abstract class JMXAttribute {
 
   @SuppressWarnings("unchecked")
   HashMap<Object, Object> getValueConversions(String field) {
-    String fullAttributeName =(field!=null)?(getAttribute().getName() + "." + field):(getAttribute().getName());
+    String fullAttributeName =
+        (field != null) ? (getAttribute().getName() + "." + field) : (getAttribute().getName());
     if (valueConversions.get(fullAttributeName) == null) {
       Object includedAttribute = matchingConf.getInclude().getAttribute();
       if (includedAttribute instanceof LinkedHashMap<?, ?>) {
         LinkedHashMap<String, LinkedHashMap<Object, Object>> attribute =
-                ((LinkedHashMap<String, LinkedHashMap<String, LinkedHashMap<Object, Object>>>) includedAttribute).get(fullAttributeName);
+            ((LinkedHashMap<String, LinkedHashMap<String, LinkedHashMap<Object, Object>>>)
+                    includedAttribute)
+                .get(fullAttributeName);
 
         if (attribute != null) {
           valueConversions.put(fullAttributeName, attribute.get("values"));
@@ -247,37 +289,36 @@ public abstract class JMXAttribute {
   /**
    * Overload `getAlias` method.
    *
-   * Note: used for `JMXSimpleAttribute` only, as `field` is null.
+   * <p>Note: used for `JMXSimpleAttribute` only, as `field` is null.
    */
-  protected String getAlias(){
+  protected String getAlias() {
     return getAlias(null);
   }
 
   /**
    * Get attribute alias.
    *
-   * In order, tries to:
-   * * Use `alias_match` to generate an alias with a regular expression
-   * * Use `alias` directly
-   * * Create an generic alias prefixed with user's `metric_prefix` preference or default to `jmx`
+   * <p>In order, tries to: * Use `alias_match` to generate an alias with a regular expression * Use
+   * `alias` directly * Create an generic alias prefixed with user's `metric_prefix` preference or
+   * default to `jmx`
    *
-   * Argument(s):
-   * * (Optional) `field`
-   *   `Null` for `JMXSimpleAttribute`.
+   * <p>Argument(s): * (Optional) `field` `Null` for `JMXSimpleAttribute`.
    */
   protected String getAlias(String field) {
     String alias = null;
 
     JMXFilter include = getMatchingConf().getInclude();
 
-    String fullAttributeName =(field!=null)?(getAttribute().getName() + "." + field):(getAttribute().getName());
+    String fullAttributeName =
+        (field != null) ? (getAttribute().getName() + "." + field) : (getAttribute().getName());
 
     if (include.getAttribute() instanceof LinkedHashMap<?, ?>) {
-      LinkedHashMap<String, LinkedHashMap<String, String>> attribute = (LinkedHashMap<String, LinkedHashMap<String, String>>) (include.getAttribute());
+      LinkedHashMap<String, LinkedHashMap<String, String>> attribute =
+          (LinkedHashMap<String, LinkedHashMap<String, String>>) (include.getAttribute());
       alias = getUserAlias(attribute, fullAttributeName);
     }
 
-    //If still null - generate generic alias
+    // If still null - generate generic alias
     if (alias == null) {
       alias = "jmx." + getDomain() + "." + fullAttributeName;
     }
@@ -288,16 +329,11 @@ public abstract class JMXAttribute {
   /**
    * Retrieve user defined alias. Substitute regular expression named groups.
    *
-   * Example:
-   *   ```
-   *   bean: org.datadog.jmxfetch.test:foo=Bar,qux=Baz
-   *   attribute:
-   *     toto:
-   *       alias: my.metric.$foo.$attribute
-   *   ```
-   *   returns a metric name `my.metric.bar.toto`
+   * <p>Example: ``` bean: org.datadog.jmxfetch.test:foo=Bar,qux=Baz attribute: toto: alias:
+   * my.metric.$foo.$attribute ``` returns a metric name `my.metric.bar.toto`
    */
-  private String getUserAlias(LinkedHashMap<String, LinkedHashMap<String, String>> attribute, String fullAttributeName){
+  private String getUserAlias(
+      LinkedHashMap<String, LinkedHashMap<String, String>> attribute, String fullAttributeName) {
     String alias = attribute.get(fullAttributeName).get(ALIAS);
     if (alias == null) {
       return null;
@@ -312,7 +348,7 @@ public abstract class JMXAttribute {
     return alias;
   }
 
-  private String replaceByAlias(String alias){
+  private String replaceByAlias(String alias) {
     // Bean parameters
     for (Map.Entry<String, String> param : beanParameters.entrySet()) {
       alias = alias.replace("$" + param.getKey(), param.getValue());
